--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@studio-freight/lenis": "^1.0.33",
     "@studio-freight/react-lenis": "^0.0.43",
     "@uidotdev/usehooks": "^2.4.1",
+    "framer-motion": "^11.0.3",
     "gsap": "^3.12.4",
     "next": "14.0.4",
     "react": "^18",
